--- a/dashboard.css
+++ b/dashboard.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+
+body{
+  font-family: 'Poppins', sans-serif;;
+}
+
 body {
   font-size: .875rem;
 }
@@ -68,36 +74,58 @@ body {
   text-transform: uppercase;
 }
 
-/*
- * Navbar
- */
-
-.navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: 1rem;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+.carousel-inner img{
+    width: 100%;
+    height: 100%;
 }
 
-.navbar .navbar-toggler {
-  top: .25rem;
-  right: 1rem;
+.carousel-caption {
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+}
+.padding{
+  padding-bottom:3rem;
 }
 
-.navbar .form-control {
-  padding: .75rem 1rem;
-  border-width: 0;
-  border-radius: 0;
+.welcome{
+  width:75%;
+  margin:0 auto;
+  padding-top:2rem;
 }
 
-.form-control-dark {
-  color: #fff;
-  background-color: rgba(255, 255, 255, .1);
-  border-color: rgba(255, 255, 255, .1);
+.carousel-item{
+  transition:-webkit-transform 0.5s ease;
+  transition:transform 0.5s ease;
+  transition: transform 0.5s ease; -webkit-transform 0.5s ease;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
 }
 
-.form-control-dark:focus {
-  border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+[class*="col-"]{
+  padding: 1rem;
 }
+
+footer{
+  background-color:#3f3f3f;
+  color: #d5d5d5;
+  padding-top:.8rem;
+}
+#canvas-image {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+@media(max-width:992px){
+.display-2{
+  font-size: 200%;
+}
+}
+
+
