--- a/dashboard.css
+++ b/dashboard.css
@@ -34,6 +34,10 @@ body {
   }
 }
 
+.welcome{
+  background-color: #f3f3f3;
+}
+
 .sidebar-sticky {
   position: relative;
   top: 0;
@@ -111,7 +115,53 @@ footer{
   color: #d5d5d5;
   padding-top:.8rem;
 }
-#canvas-image {
+
+
+
+@media(max-width:992px){
+.display-2{
+  font-size: 200%;
+}
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+.aos-all {
+  width: 1000px;
+  max-width: 98%;
+  margin: 10vh auto 0 auto;
+}
+
+.aos-item {
+  display: inline-block;
+  float: left;
+  width: 33.3333%;
+  height: 300px;
+  padding: 20px;
+}
+
+.aos-item__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  float: left;
+  background: #1da4e2;
+  line-height: 260px;
+  text-align: center;
+  color: #fff;
+}
+
+@media screen and (max-width: 800px) {
+  .aos-item {
+    width: 50%;
+  }
+}
+
+#canvas-basic {
   position: absolute;
   display: block;
   width: 100%;
@@ -121,11 +171,3 @@ footer{
   bottom: 0;
   left: 0;
 }
-
-@media(max-width:992px){
-.display-2{
-  font-size: 200%;
-}
-}
-
-
